# Machine-Learning-Portfolio

./: gitcommand tutorial.txt
AI_medical_projects/HEALTHWISE-HACKKU25/: app.py
AI_medical_projects/agentic_medical_system/: README.md  pubspec.yaml
AI_medical_projects/agentic_medical_system/backend/: .env  .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
AI_medical_projects/agentic_medical_system/backend/app/: main.py
AI_medical_projects/agentic_medical_system/backend/app/agents/: base.py  nutrition.py  orchestrator.py  vitals.py
AI_medical_projects/agentic_medical_system/backend/app/api/v1/: analysis.py  api.py  auth.py  chatbot.py
AI_medical_projects/agentic_medical_system/backend/app/api/v1/endpoints/: agents.py
AI_medical_projects/agentic_medical_system/backend/app/core/: config.py  limiter.py  logging.py  metrics.py  middleware.py  mongo_db.py
AI_medical_projects/agentic_medical_system/backend/app/core/langgraph/: graph.py
AI_medical_projects/agentic_medical_system/backend/app/core/langgraph/tools/: __init__.py
AI_medical_projects/agentic_medical_system/backend/app/core/prompts/: __init__.py  system.md
AI_medical_projects/agentic_medical_system/backend/app/models/: base.py  session.py  thread.py  user.py
AI_medical_projects/agentic_medical_system/backend/app/schemas/: auth.py  chat.py  graph.py
AI_medical_projects/agentic_medical_system/backend/app/services/: analysis.py  database.py  llm.py
AI_medical_projects/agentic_medical_system/backend/app/utils/: auth.py  llm_utils.py  sanitization.py
AI_medical_projects/agentic_medical_system/backend/grafana/dashboards/json/: dashboard.json
AI_medical_projects/agentic_medical_system/backend/prometheus/: prometheus.yml
AI_medical_projects/agentic_medical_system/backend/scripts/: entrypoint.sh
AI_medical_projects/agentic_medical_system/backend/tests/: test_agents_standalone.py
Projects/Enterprise-AI-Chatbot/: README.md  requirements.txt
Projects/Nutrify/: docker-compose.yml
Projects/ai-ecommerce-sanity-clerk/: package.json
Projects/www.continuouscare.io/: QUICKSTART.md  README.md  about  blog  contact-us  index.html  jobs  patient-phr  platform-security  pricing  privacy-policy  register  responsible-disclosure  robots.txt  terms-conditions
agentic_sql_assistant/: .env.example  Dockerfile  docker-compose.yml  pyproject.toml
agentic_sql_assistant/app/: main.py
agentic_sql_assistant/app/api/v1/endpoints/: auth.py  chat.py
agentic_sql_assistant/app/core/: config.py  metrics.py  middleware.py  security.py
agentic_sql_assistant/app/core/agent/: graph.py  tools.py
agentic_sql_assistant/app/models/: base.py  session.py  thread.py  user.py
agentic_sql_assistant/app/services/: database.py  llm.py  sql_server.py
agentic_sql_assistant/evals/: judge.py  run_evals.py
agentic_sql_assistant/frontend/: package-lock.json
agentic_sql_assistant/frontend/src/: App.jsx  index.css
agentic_sql_assistant/frontend/src/pages/: Chat.jsx  Login.jsx
agentic_sql_assistant/grafana/dashboards/json/: api_metrics.json
agentic_sql_assistant/prometheus/: prometheus.yml
agentic_sql_assistant/scripts/: docker-entrypoint.sh  stress_test.py
ffmpeg-2026-03-01-git-862338fe31-essentials_build/ffmpeg/: README.txt
googleantrigravity/: CV_Abul_Kashim.md
googleantrigravity/agent-pay/: .gitignore
googleantrigravity/agent-pay/awesome-agent-api/: .env.example  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml
googleantrigravity/agent-pay/awesome-agent-api/Lang_chain/: lang_chain.py
googleantrigravity/agent-pay/awesome-agent-api/api/: main.py  models.py
googleantrigravity/agent-pay/awesome-agent-api/api/db/: database.py  models.py
googleantrigravity/agent-pay/awesome-agent-api/application/chat_service/: agent_service.py
googleantrigravity/agent-pay/awesome-agent-api/src/awesome_agent_api/: exceptions.py  utils.py
googleantrigravity/agent-pay/awesome-agent-api/src/awesome_agent_api/infrastructure/: web3_service.py
googleantrigravity/agent-pay/awesome-agent-api/tests/: test_example_agent_api.py  test_offchain_flow.py
googleantrigravity/pdf-to-excel-extraction/: .gitignore  DEPLOYMENT.md  README.md  setup.ps1
rag_basic/: pyproject.toml
(+1163 files in other folders)
