[project]
name = "agentic_sql_assistant"
version = "0.1.0"
description = "AI-powered assistant that connects to a on prem SQL Server database"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    # API & Server
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.9",
    "slowapi>=0.1.9",
    
    # Database (App State)
    "sqlmodel>=0.0.16",
    "psycopg2-binary>=2.9.9",
    "pgvector>=0.2.5",
    "asyncpg>=0.29.0", # Async Postgres driver
    
    # Database (Target SQL Server)
    "pyodbc>=5.1.0",
    "sqlalchemy>=2.0.25",
    
    # AI & Agentic
    "langchain>=0.1.0",
    "langchain-openai>=0.1.0",
    "langchain-community>=0.0.10",
    "langgraph>=0.0.24",
    "openai>=1.12.0",
    
    # Utils
    "python-dotenv>=1.0.1",
    "pydantic>=2.6.1",
    "pydantic-settings>=2.1.0",
    "tenacity>=8.2.3",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=4.1.2",
    "httpx>=0.27.0",
    
    # Observability
    "prometheus-client>=0.19.0",
    "starlette-prometheus>=0.7.0",
    "structlog>=24.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "black>=24.1.1",
    "isort>=5.13.2",
    "flake8>=7.0.0",
]

[tool.pytest.ini_options]
python_files = ["test_*.py", "*_test.py"]
asyncio_mode = "auto"
